--- a/app/index.html
+++ b/app/index.html
@@ -9,16 +9,27 @@
   <link rel="stylesheet" href="temp/styles/styles.css">
 </head>
 <body>
-  <header>
-    <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#" class="btn">Get in Touch</a>
-    <nav>
-      <ul>
-        <li><a href="#our-beginning">Our Beginnings </a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+  <div class="wrapper">
+    <div class="site-header__logo">
+      <div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
+    </div>
+    <div class="site-header__menu-icon">
+      <div class="site-header__menu-icon__middle"></div>
+    </div>
+    <div class="site-header__menu-content">
+      <div class="site-header__button-container">
+        <a href="#" class="btn">Get in Touch</a>
+      </div>
+      <nav class="primary-nav primary-nav--pull-right">
+        <ul>
+          <li><a href="#our-beginning">Our Beginnings </a></li>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+        </ul>
+      </nav>
+    </div>
+    </div>
   </header>
 
   <div class="large-hero">
@@ -48,7 +59,7 @@
       <div class="row row--gutters">
         <div class="row__medium-4 row__medium-4-larger row__b-margin-until-medium">
         <picture>
-          <source sizes="404px" srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi-i.jpg 808w" media="(min-width: 1020px)">
+          <source sizes="404px" srcset="assets/images/our-start.jpg 404w, assets/images/our-start-hi-dpi.jpg 808w" media="(min-width: 1020px)">
           <source sizes="320px" srcset="assets/images/our-start-portrait.jpg 382w, assets/images/our-start-portrait-high-dpi.jpg 764w" media="(min-width: 800px)">
           <img srcset="assets/images/our-start-landscape.jpg 800w, assets/images/our-start-landscape-hi-dpi.jpg 1600w" alt="Our founder Jane Doe.">
         </picture>
@@ -141,5 +152,6 @@
   <div class="wrapper">
     <p><span class="site-footer__text">Copyright &copy; 2016 Clear View Escapes. All rights reserved.</span> <a href="#" class="btn btn--orange">Get in Touch</a></p>
   </footer>
+  <script src="/temp/scripts/App.js"></script>
 </body>
 </html>
